# simmer-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  add-mcp  pyproject.toml
.archived-2026-05-mcp-pre-unification/: README.md
.archived-2026-05-mcp-pre-unification/src/: index.ts
.clawhub/: lock.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  main-red-canary.yml  publish-mcp.yml  publish-packages.yml  publish-sdk.yml  secret-scan.yml
examples/: basic_trading.py  humanplane_integration.py  portfolio_cap_skill.py  regime_gate_skill.py
mcp/: .gitignore  CONTRIBUTING.md  CORE_BUNDLE_DECISION.md  LICENSE  README.md  SUBMISSION.md  package-lock.json  package.json  server.json  smithery.yaml
mcp/bundled-snapshots/: docs.md  skill.md
mcp/scripts/: add-mcp  add-mcp.sh  bundle-skills.ts
mcp/src/: api.ts  blocked-flags.ts  docs-tools.ts  env-translation.ts  errors.ts  index.ts  mcp-server.ts  output-parsing.ts  per-skill-tools.ts  runtime-probe.ts  skill-discovery.ts  skill-runner.ts  tool-registry.ts  trade-primitives.ts  troubleshoot.ts  version.ts
mcp/tests/: api.test.ts  blocked-flags.test.ts  discovery.test.ts  docs-tools.test.ts  env-translation.test.ts  errors.test.ts  mcp-protocol.test.ts  output-parsing.test.ts  per-skill-smoke.test.ts  per-skill-tools.test.ts  pro-gate.test.ts  register-tool.test.ts  runtime-probe.test.ts  scoring.test.ts  skill-runner.test.ts  state.test.ts  trade-primitives.test.ts  troubleshoot.test.ts  version-consistency.test.ts
scripts/: check-skill-governance.py  check_publish_lag.py  check_skill_examples.py  plan_package_publish.py  publish.sh  sync_replay_engine.py  test_check_skill_examples.py
simmer_sdk/: __init__.py  approvals.py  batch_validation.py  cli.py  client.py  combo.py  combo_signing.py  dw_redeem.py  hyperliquid_signing.py  hyperliquid_venue.py  ows_utils.py  paper.py  polymarket_contracts.py  signing.py  sizing.py  skill.py  test_skill.py  venue_adapter.py  version_check.py
simmer_sdk/backtest/: __init__.py  tape.py
simmer_sdk/execution/: __init__.py  partial_fill.py
simmer_sdk/guards/: __init__.py  news_recency_veto.py
simmer_sdk/regime/: __init__.py  gate.py
simmer_sdk/risk/: __init__.py  drawdown.py  oracle_engineering.py  portfolio_cap.py
skills/: README.md  __init__.py  config_loader.py
skills/ai-divergence/: README.md  SKILL.md  ai_divergence.py
skills/arbscanner/: CONTEXT.md  SKILL.md  arb_scanner.py
skills/copytrading/: README.md  SKILL.md  copytrading_trader.py
skills/fastloop/: SKILL.md  fastloop_trader.py
skills/kalshi-weather-trader/: SKILL.md  weather_trader.py
skills/mertsniper/: SKILL.md  mert_sniper.py
skills/polymarket-ai-divergence/: SKILL.md  ai_divergence.py  clawhub.json  gamma_api.py
skills/polymarket-btc-up-down-trader/: SKILL.md  clawhub.json  strategy.py
skills/polymarket-combo-builder/: DISCLAIMER.md  SKILL.md  clawhub.json  combo_builder.py  requirements.txt
skills/polymarket-copytrading/: SKILL.md  clawhub.json  copytrading_trader.py  reactor_trader.py  requirements.txt
skills/polymarket-dca-eval-trader/: SKILL.md  clawhub.json  dca_eval_trader.py
skills/polymarket-elon-tweets/: PLATFORM_FIX_CONTEXT.md  SKILL.md  clawhub.json  elon_tweets.py
skills/polymarket-fast-loop/: SKILL.md  clawhub.json  config.json  fastloop_trader.py  simmer_sdk
skills/polymarket-fast-scaler/: NEXT.md  SKILL.md  clawhub.json  config.json  fast_scaler.py  paper-validation-results.md
skills/polymarket-market-maker/: DISCLAIMER.md  SKILL.md  clawhub.json  market_maker.py  requirements.txt
skills/polymarket-mert-sniper/: DISCLAIMER.md  SKILL.md  clawhub.json  mert_sniper.py
skills/polymarket-mil-aircraft-tracker/: SKILL.md  clawhub.json  milaircraft_tracker.py  pref_client.py
skills/polymarket-nothing-ever-happens/: DISCLAIMER.md  SKILL.md  clawhub.json  nothing_ever_happens.py
skills/polymarket-research/: SKILL.md  clawhub.json  research.py
skills/polymarket-shock-ladder/: SKILL.md  clawhub.json  shock_ladder_trader.py
skills/polymarket-signal-sniper/: SKILL.md  clawhub.json  signal_sniper.py
skills/polymarket-soccer-shock-ladder/: DISCLAIMER.md  SKILL.md  shock_ladder.py  shock_ladder_trader.py
skills/polymarket-sports-trader/: SKILL.md  clawhub.json  sports_trader.py
skills/polymarket-wallet-autopsy/: SKILL.md  wallet_autopsy.py
skills/polymarket-wallet-xray/: README.md  SKILL.md  wallet_autopsy.py  wallet_xray.py
skills/polymarket-weather-trader/: CHANGELOG.md  SKILL.md  clawhub.json  weather_trader.py
skills/polymarket-world-cup-delta-pairs/: DISCLAIMER.md  SKILL.md  clawhub.json  world_cup_delta_pairs.py
skills/polymarket-worldcup-copytrader/: DISCLAIMER.md  SKILL.md  clawhub.json  copytrader.py
skills/polymarket-worldcup-parlay-roller/: DISCLAIMER.md  SKILL.md  parlay_roller.py  parlay_roller_trader.py  requirements.txt  roller_config.example.json
skills/prediction-trade-journal/: SKILL.md
tests/: test_activate_combo_dw.py  test_activate_polymarket_dw.py  test_agent_wallets_sdk.py  test_auto_redeem_timeout_noise.py  test_backtest_run.py  test_base_url_env_override.py  test_batch_validation.py  test_candle_rebase.py  test_check_publish_lag.py  test_cli.py  test_client_constructors.py  test_combo_placement.py  test_combo_signing.py  test_copytrading_reactor_version_gate.py  test_cred_recovery_retry.py  test_decimal_validation.py  test_drawdown_controller.py  test_dual_wallet_positions.py  test_dw_redeem.py  test_empirical_kelly.py  test_ensure_can_trade.py  test_failed_trade_logging.py  test_fastloop_signal_fetch.py  test_find_markets_server_query.py  test_get_candles.py  test_get_positions_live_false.py  test_hyperliquid_client_integration.py  test_hyperliquid_signing.py  test_hyperliquid_venue.py  test_link_wallet_confirm_replace_managed.py  test_maker_rewards_status.py  test_market_parse.py  test_milaircraft_categories.py  test_milaircraft_integration.py  test_milaircraft_pref_client.py  test_milaircraft_regions.py  test_news_recency_veto.py  test_ows_client.py  test_ows_signing.py  test_ows_utils.py  (+21 more)
(+131 files in other folders)
