[build-system]
requires = ["setuptools>=61.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simmer-sdk"
version = "0.11.0"
description = "Python SDK for trading prediction markets with AI agents - includes Clawbot trading skills"
readme = "README.md"
authors = [
    {name = "Simmer", email = "hello@simmer.markets"}
]
keywords = ["prediction-markets", "polymarket", "kalshi", "trading", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "solders>=0.27.1",
    "base58>=2.1.1",
    "eth-account>=0.13.0",
    "py-order-utils>=0.3.0",
    "py-clob-client>=0.30.0",
    # V2 CLOB client for Polymarket V2 (2026-04-28 cutover). V1 deps
    # retained for users who pin SIMMER_POLYMARKET_EXCHANGE_VERSION=v1.
    "py-clob-client-v2>=1.0.0",
]

[project.urls]
Homepage = "https://simmer.markets"
Documentation = "https://github.com/SpartanLabsXyz/simmer-sdk"
Repository = "https://github.com/SpartanLabsXyz/simmer-sdk"
Issues = "https://github.com/SpartanLabsXyz/simmer-sdk/issues"
Skills = "https://github.com/SpartanLabsXyz/simmer-sdk/tree/main/skills"

[tool.setuptools.packages.find]
where = ["."]
include = ["simmer_sdk*"]

[tool.setuptools.package-data]
simmer_sdk = ["scripts/*.js"]
