[build-system]
requires = ["setuptools>=61.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simmer-sdk"
version = "0.17.22"
description = "Python SDK for trading prediction markets with AI agents - includes Clawbot trading skills"
readme = "README.md"
authors = [
    {name = "Simmer", email = "hello@simmer.markets"}
]
keywords = ["prediction-markets", "polymarket", "kalshi", "trading", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "solders>=0.27.1",
    "base58>=2.1.1",
    "eth-account>=0.13.0",
    "py-order-utils>=0.3.0",
    "py-clob-client>=0.30.0",
    # V2 CLOB client for Polymarket V2 (2026-04-28 cutover). V1 deps
    # retained for users who pin SIMMER_POLYMARKET_EXCHANGE_VERSION=v1.
    "py-clob-client-v2>=1.0.0",
    # POLY_1271 (sig type 3) signing for Polymarket deposit-wallet users
    # (SIM-1521). Provides ERC-7739 TypedDataSign wrapping via
    # `polynode.trading.eip712.create_signed_order_v2`. Pinned to a known-
    # working release; the helper API is stable.
    "polynode>=0.10.3",
]

[project.optional-dependencies]
# Open Wallet Standard — local-first encrypted wallet vault with policy
# engine. Required for OWS-mode signing (per-agent isolation, recommended
# for new agents). Not a hard dep because most SDK users today use
# private-key mode (`WALLET_PRIVATE_KEY` env var) which is the default;
# OWS is opt-in.
#
# Install with: pip install 'simmer-sdk[ows]'
#
# Note: the import name `ows` differs from the pip package name
# `open-wallet-standard`. Surfaced 2026-05-12 via johng@iexecutellc —
# users searching PyPI for `ows` find nothing. The `[ows]` extra
# eliminates the asymmetry: one install command, no package-name lookup
# required.
ows = ["open-wallet-standard>=1.3.0"]

[project.urls]
Homepage = "https://simmer.markets"
Documentation = "https://github.com/SpartanLabsXyz/simmer-sdk"
Repository = "https://github.com/SpartanLabsXyz/simmer-sdk"
Issues = "https://github.com/SpartanLabsXyz/simmer-sdk/issues"
Skills = "https://github.com/SpartanLabsXyz/simmer-sdk/tree/main/skills"

[tool.setuptools.packages.find]
where = ["."]
include = ["simmer_sdk*"]

[tool.setuptools.package-data]
simmer_sdk = ["scripts/*.js"]
