[build-system]
requires = ["setuptools>=61.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simmer-sdk"
version = "0.19.0"
description = "Python SDK for trading prediction markets with AI agents - powers installable trading skills across agent runtimes"
readme = "README.md"
authors = [
    {name = "Simmer", email = "hello@simmer.markets"}
]
keywords = ["prediction-markets", "polymarket", "kalshi", "trading", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"
# Supply-chain note: the signing-critical Polymarket/OWS libraries below carry
# UPPER BOUNDS so a compromised or breaking new major/minor release can't be
# pulled silently into a key-bearing environment on a fresh install. These are
# niche packages (low chance of co-dependency conflicts). eth-account and
# requests are deliberately left uncapped — capping eth-account fights web3.py's
# own pin and would break installs, and requests is the most-vetted package on
# PyPI. Bump the ceilings deliberately when validating a new upstream release.
dependencies = [
    "requests>=2.31.0",
    "solders>=0.27.1,<0.28.0",
    "base58>=2.1.1",
    "eth-account>=0.13.0",
    "py-order-utils>=0.3.0",
    "py-clob-client>=0.30.0,<1.0.0",
    # V2 CLOB client for Polymarket V2 (2026-04-28 cutover). V1 deps
    # retained for users who pin SIMMER_POLYMARKET_EXCHANGE_VERSION=v1.
    "py-clob-client-v2>=1.0.0,<2.0.0",
    # POLY_1271 (sig type 3) signing for Polymarket deposit-wallet users
    # (SIM-1521). Provides ERC-7739 TypedDataSign wrapping via
    # `polynode.trading.eip712.create_signed_order_v2`. Pinned to a known-
    # working release; the helper API is stable.
    "polynode>=0.10.3,<0.11.0",
]

[project.optional-dependencies]
# Open Wallet Standard — local-first encrypted wallet vault with policy
# engine. Required for OWS-mode signing (per-agent isolation, recommended
# for new agents). Not a hard dep because most SDK users today use
# private-key mode (`WALLET_PRIVATE_KEY` env var) which is the default;
# OWS is opt-in.
#
# Install with: pip install 'simmer-sdk[ows]'
#
# Note: the import name `ows` differs from the pip package name
# `open-wallet-standard`. Surfaced 2026-05-12 via johng@iexecutellc —
# users searching PyPI for `ows` find nothing. The `[ows]` extra
# eliminates the asymmetry: one install command, no package-name lookup
# required.
ows = ["open-wallet-standard>=1.3.0,<2.0.0"]

# Hyperliquid HIP-4 outcome-market trading. Provides the official SDK's
# validated EIP-712 wire-building + action-hash + float-formatting primitives
# (reused verbatim — the same code path validated byte-for-byte in the P0
# spike). Not a hard dep: only agents trading HIP-4 need it. eth-account
# (already a core dep) covers the raw-key signing; this adds msgpack-based
# action hashing.
#
# Install with: pip install 'simmer-sdk[hyperliquid]'
hyperliquid = ["hyperliquid-python-sdk>=0.24.0,<1.0.0"]

# Local historical backtesting (SIM-3070). Pulls the engine substrate the
# vendored `simmer_sdk.backtest.replay` package needs: duckdb (reads the
# Polymarket trade-tape parquet set), fastapi+uvicorn (serves the frozen
# replay API the unmodified skill subprocess calls over real HTTP). `requests`
# is already a core dep. Not a hard dep: only `simmer backtest` users need it,
# and duckdb pulls a sizeable native wheel most SDK users never touch.
#
# Install with: pip install 'simmer-sdk[backtest]'
backtest = [
    "duckdb>=0.10.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    # duckdb binds the tape's tz-aware TIMESTAMPTZ columns via pytz; without it
    # every market/price query raises "Required module 'pytz' failed to import"
    # → the replay server 500s and every backtest fails on a fresh install. Not
    # pulled in transitively by duckdb/fastapi/uvicorn, so pin it explicitly.
    "pytz>=2023.3",
]

[project.scripts]
simmer = "simmer_sdk.cli:main"

[project.urls]
Homepage = "https://simmer.markets"
Documentation = "https://github.com/SpartanLabsXyz/simmer-sdk"
Repository = "https://github.com/SpartanLabsXyz/simmer-sdk"
Issues = "https://github.com/SpartanLabsXyz/simmer-sdk/issues"
Skills = "https://github.com/SpartanLabsXyz/simmer-sdk/tree/main/skills"

[tool.setuptools.packages.find]
where = ["."]
include = ["simmer_sdk*"]

[tool.setuptools.package-data]
simmer_sdk = [
    "scripts/*.js",
    # bundled offline demo for `simmer backtest --demo` (tiny tape + skill)
    "backtest/demo/tape/*",
    "backtest/demo/backtest-demo-favorites/*",
]
